--- a/.github/workflows/test_pr.yaml
+++ b/.github/workflows/test_pr.yaml
@@ -1,15 +1,13 @@
 name: "Test Transforms"
 
 env:
-  SAIL_CLIENT_ID: ${{ secrets.DEV_TENANT_CLIENT_ID }}
-  SAIL_CLIENT_SECRET: ${{ secrets.DEV_TENANT_CLIENT_SECRET }}
-  SAIL_BASE_URL: ${{ secrets.DEV_TENANT_BASE_URL }}
   CLI_VERSION: 2.1.8
 
 on:
   pull_request:
     branches:
       - dev
+      - main
   workflow_dispatch:
 
 jobs:
@@ -22,6 +20,17 @@ jobs:
         with:
           ref: ${{ github.ref }}
           submodules: 'true'
+      - name: Set Environment Variables based on branch
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+            echo "Setting environment for main branch"
+            echo "SAIL_CLIENT_ID=${{ secrets.PROD_TENANT_CLIENT_ID }}" >> $GITHUB_ENV
+            echo "SAIL_CLIENT_SECRET=${{ secrets.PROD_TENANT_CLIENT_SECRET }}" >> $GITHUB_ENV
+            echo "SAIL_BASE_URL=${{ secrets.PROD_TENANT_BASE_URL }}" >> $GITHUB_ENV
+          elif [[ "${{ github.ref }}" == "refs/heads/dev" ]]; then
+            echo "SAIL_CLIENT_ID=${{ secrets.DEV_TENANT_CLIENT_ID }}" >> $GITHUB_ENV
+            echo "SAIL_CLIENT_SECRET=${{ secrets.DEV_TENANT_CLIENT_SECRET }}" >> $GITHUB_ENV
+            echo "SAIL_BASE_URL=${{ secrets.DEV_TENANT_BASE_URL }}" >> $GITHUB_ENV
 
       - name: Download sailpoint-cli package
         run: |
