--- a/.github/workflows/on_merge.yaml
+++ b/.github/workflows/on_merge.yaml
@@ -21,6 +21,18 @@ jobs:
         with:
           ref: ${{ github.ref }}
           submodules: 'true'
+      - name: Set Environment Variables based on branch
+        run: |
+          if [[ "${{ github.ref }}" == "main" ]]; then
+            echo "Setting environment for main branch"
+            echo "SAIL_CLIENT_ID=${{ secrets.PROD_TENANT_CLIENT_ID }}" >> $GITHUB_ENV
+            echo "SAIL_CLIENT_SECRET=${{ secrets.PROD_TENANT_CLIENT_SECRET }}" >> $GITHUB_ENV
+            echo "SAIL_BASE_URL=${{ secrets.PROD_TENANT_BASE_URL }}" >> $GITHUB_ENV
+          elif [[ "${{ github.ref }}" == "dev" ]]; then
+            echo "SAIL_CLIENT_ID=${{ secrets.DEV_TENANT_CLIENT_ID }}" >> $GITHUB_ENV
+            echo "SAIL_CLIENT_SECRET=${{ secrets.DEV_TENANT_CLIENT_SECRET }}" >> $GITHUB_ENV
+            echo "SAIL_BASE_URL=${{ secrets.DEV_TENANT_BASE_URL }}" >> $GITHUB_ENV
+          fi
 
       - id: files
         uses: jitterbit/get-changed-files@v1
