--- a/.github/workflows/on_merge.yaml
+++ b/.github/workflows/on_merge.yaml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           submodules: 'true'
 
       - name: Set Environment Variables based on branch
@@ -87,3 +88,5 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Sync transforms
+          commit_user_name: tyler-mairose-sp
+          commit_user_email: tyler.mairose@sailpoint.com
