--- a/.github/workflows/on_merge.yaml
+++ b/.github/workflows/on_merge.yaml
@@ -14,6 +14,8 @@ jobs:
   push_transforms:
     name: Push Transforms
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout PR branch
         uses: actions/checkout@v3
