--- a/.github/workflows/map_transforms_before_merge.yaml
+++ b/.github/workflows/map_transforms_before_merge.yaml
@@ -24,7 +24,7 @@ jobs:
           ls -al
           ./transform_mappings.sh
     
-      - name: Commit changes and create new version tag
+      - name: Commit changes after 
         if: steps.mapTransforms.outcome == 'success'
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
