Update fetch depth to allow updating dev branch

--- a/.github/workflows/on_merge.yaml
+++ b/.github/workflows/on_merge.yaml
@@ -24,6 +24,7 @@ jobs:
           ref: ${{ github.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
           submodules: 'true'
+          fetch-depth: 0
 
       - name: Set Environment Variables based on branch
         run: |
