--- a/mappings.json
+++ b/mappings.json
@@ -8,6 +8,6 @@
     "db72be57-27a6-4f55-be6b-baa8cf608654": "78cca0f8-9c84-4892-9775-e5de6cf552c3",
     "736fd5ef-81cb-4ebd-aa47-31d2e86c143d": "cf5ac41a-b4a9-4c66-a0ec-d5a5cbfcc050",
     "2ae7618e-8e37-4c46-b02d-aa4015d31bbb": "71c5dbc2-2ca3-435c-a618-922ac1e9ff8e",
-    "474fefdb-87a3-4a74-91ba-a4b9075cb207": "315652a4-4436-40c0-b5f6-d2c924cb3d87"
+    "474fefdb-87a3-4a74-91ba-a4b9075cb207": "Format Sailpoint Email"
   }
 }
