Update multiple transform IDs in main.

--- a/mappings.json
+++ b/mappings.json
@@ -10,6 +10,6 @@
     "2ae7618e-8e37-4c46-b02d-aa4015d31bbb": "71c5dbc2-2ca3-435c-a618-922ac1e9ff8e",
     "474fefdb-87a3-4a74-91ba-a4b9075cb207": "3e3b6678-d60f-424e-83b5-1b0ea54cc671",
     "ba879bcd-028c-4e12-978c-663d1b763dab": "7ce50649-7517-4d25-893b-430f0420576f",
-    "ab4fd281-27af-4dfd-a243-0ee7aca9cf16": "FormatGmail"
+    "ab4fd281-27af-4dfd-a243-0ee7aca9cf16": "e4041aaa-a656-4b0b-a224-70a68afa098a"
   }
 }
